--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li>
+                <a href="./recipes/egg-tarts.html">Egg Tarts</a>
+            </li>
+            <li>
+                <a href="./recipes/xiaolongbao.html">Xiaolongbao</a>
+            </li>
+            <li>
+                <a href="./recipes/zhaliang.html">Zhaliang</a>
+            </li>
+        </ul>
     </body>
 </html>
