Add image egg-tarts.html

--- a/recipes/egg-tarts.html
+++ b/recipes/egg-tarts.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Egg Tarts</h1>
+        <img src="../images/eggtarts.jpg" alt="Photo of egg tarts" width="300">
     </body>
 </html>
