Add description heading and paragraph egg-tart.html

--- a/recipes/egg-tarts.html
+++ b/recipes/egg-tarts.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Egg Tarts</h1>
         <img src="../images/eggtarts.jpg" alt="Photo of egg tarts" width="300">
+        <h2>Description</h2>
+        <p>Hong Kong egg tarts are small (usually about 3 inches in diameter) circular tarts of flaky pastry, filled with a smooth, lightly sweetened egg custard. They are often served at dim sum restaurants, ass well as Chinese bakeries. You'll find these Chinese egg tarts in Hong Kong, Macau, China, and Chinatowns around the world.</p>
     </body>
 </html>
