--- a/recipes/egg-tarts.html
+++ b/recipes/egg-tarts.html
@@ -21,5 +21,19 @@
             <li>3 large eggs</li>
             <li>1 teaspoon vanilla extract</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>In a bowl, combine the flour and salt. The butter should be just soft enough that it gives when you press it, but not so soft that it collapses. Basically, you want it to be soft enough to break up with your fingers, but it shouldn't immediately form a paste with the flour.</li>
+            <li>Cut the butter into small cubes, and add it to the flour and salt. Working quickly, break it up roughly with your fingers until it resembles coarse crumbs with some pea-sized chunks of butter still in the mixture.</li>
+            <li>Add 2 tablespoons of cold water, and bring the dough together with your hands. Add a little more water if necessary (start with 1/2 a teaspoon), no more than 3 teaspoons. At this point, the dough will be scraggly and dry. You need to rest the dough in the refrigerator to alow the flour in the dough to contniue to absorb moisture. Wrap the dough tightly in plastic or a reusable bag, and refrigerate for 20 minutes.</li>
+            <li>On a lightly floured surface, roll the dough into a roughly 6x15 inch rectangle. Work quickly to avoid overworking it.</li>
+            <li>Fold the top third of the dough down to the center, then the bottom third up and over that. Give the dough a quarter turn (left or right) and roll out again to a 6x15 inch rectangle. Fold the same way as before, cover, and chill for 1 hour.</li>
+            <li>While the dough is resting, make the filling. Dissolve the sugar into 1 cup of hot water, and allow the mixture to cool to room temperature. Whisk evaporated milk, eggs, and vanilla together, and then thoroughly whisk in the sugar water. Strain through a fine meshed strainer into a large measuring cup or pitcher (something with a pour spout). You should have about 2 to 2 1/4 cups of custard.</li>
+            <li>Preheat the oven to 375 degrees F/190 degrees C, and position a rack in the lower third of your oven.</li>
+            <li>Roll out the dough 0.2 inch/5 mm thick, and cut into 4-inch circles to fit either mini tart tins or a shallow non-stick standard muffin pan, leaving a lip going over the top of the cup (the tart shells will shrink as they bake, so you want ample clearance). Take the excess dough, re-roll it, and cut more circles until you have around 16 of them.</li>
+            <li>Evenly fill the tart shells about three quarters full. If you have an ample lip of dough at the top, you can fill it just until you reach the part where the dough curves outward.</li>
+            <li>Once filled, immediately (but very slowly and carefully) transfer tha pan to the oven. Immediately reduce the heat to 350 degrees F/180 degrees C, and bake for 26-29 minutes, until filling is just set (if a toothpick can stand up in it, it's done).</li>
+            <li>Allow the tarts to cool for at least 10 minutes before enjoying.</li>
+        </ol>
     </body>
 </html>
