Add image xiaolongbao.html

--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Xiaolongbao</h1>
+        <img src="../images/xiaolongbao.jpg" alt="Photo of xiaolongbao" width="300">
     </body>
 </html>
