Add description heading and paragraph xiaolongbao.html

--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Xiaolongbao</h1>
         <img src="../images/xiaolongbao.jpg" alt="Photo of xiaolongbao" width="300">
+        <h2>Description</h2>
+        <p>Chinese soup dumplings, sometimes referred to as Shanghai Soup Dumplings, xiaolongbao, tang bao, or "soupy buns", are a steamed dumpling consisting of a paper thin wrapper enveloping a seasoned pork filling and hot, flavorful soup. Each dumpling is pleated with many folds. Once steamed, the delicate dumplings are dipped in a mixture of Chinese black vinegar and julienned ginger for the perfectly balanced bite.</p>
     </body>
 </html>
