Add ingredient heading and unordered list xiaolongbao.html

--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -9,5 +9,38 @@
         <img src="../images/xiaolongbao.jpg" alt="Photo of xiaolongbao" width="300">
         <h2>Description</h2>
         <p>Chinese soup dumplings, sometimes referred to as Shanghai Soup Dumplings, xiaolongbao, tang bao, or "soupy buns", are a steamed dumpling consisting of a paper thin wrapper enveloping a seasoned pork filling and hot, flavorful soup. Each dumpling is pleated with many folds. Once steamed, the delicate dumplings are dipped in a mixture of Chinese black vinegar and julienned ginger for the perfectly balanced bite.</p>
+        <h2>Ingredient</h2>
+        For the aspic:
+        <ul>
+            <li>1/2 pound pork skin</li>
+            <li>1 pound pork neck bones</li>
+            <li>water</li>
+            <li>2 slices ginger</li>
+            <li>1 scallion</li>
+            <li>1 tablespoon shaoxing wine</li>
+        </ul>
+        For the dough:
+        <ul>
+            <li>1 cup all-purpose flour</li>
+            <li>6 tablespoons warm water</li>
+        </ul>
+        For the filling: 
+        <ul>
+            <li>1 pound ground pork</li>
+            <li>2 tablespoons shaoxing wine</li>
+            <li>3/4 teaspoon salt</li>
+            <li>1/2 teaspoon sesame oil</li>
+            <li>3/4 teaspoon sugar</li>
+            <li>3 teaspoons light soy sauce</li>
+            <li>3 tablespoons water</li>
+            <li>1/8 teaspoon ground white-pepper</li>
+            <li>1 tablespoon ginger</li>
+            <li>1 heaping cup aspic</li>
+        </ul>
+        To serve:
+        <ul>
+            <li>Chinese black vinegar</li>
+            <li>fresh ginger</li>
+        </ul>
     </body>
 </html>
