Add step heading and ordered list xiaolongbao.html

--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -42,5 +42,21 @@
             <li>Chinese black vinegar</li>
             <li>fresh ginger</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>In a small pot, add the pork skin and pork bones and cover with cold water. Bring to a rolling boil, and immediately drain and rinse off the bones and the skin. This gets rid of any impurities. Rinse out the pot and put everything back in. Add 4 cups (950 ml) water, ginger, scallion and wine. Bring the pot to a boil and then reduce the heat to low. Cover and simmer for 2 hours.</li>
+            <li>After 2 hours, turn off the heat, allow the soup to cool, and strain the liquid into a bowl. Once the liquid is completely cooled, cover and refrigerate overnight.</li>
+            <li>In a mixing bowl, add the flour and the warm water 1 tablespoon at a time. Work and knead the dough for 15-20 minutes. The dough should be very soft and smooth. Cover with a cloth and let it rest for 30 minutes.</li>
+            <li>Take your ground pork and put it in the food processor. Pulse for 30-60 seconds until the pork resembles paste. In a mixing bowl, add the pork and the rest of the ingredients except the aspic. Whip everything together thoroughly, for about 2 minutes. You want everything to be extremely well combined, and the pork should look like a light, airy paste. Gently fold in the diced aspic, and do not over-mix. Cover and transfer the filling to the refrigerator until ready to make the dumplings. If you're ready now, you can put it in the freezer for 15 minutes to allow it to firm up and make assembling the buns easier.</li>
+            <li>Lightly dust a clean work surface with flour and roll the dough into a long cylinder/cigar, about an inch in diameter. Cut the dough into small equal pieces weighing about 11 grams each (the dough chunks should be a size resembling that of gnocchi). Roll out each piece into a round disc about 3-3 1/4 inches in diameter. Keep everything under a damp cloth.</li>
+            <li>Prepare your bamboo steamer. You can line it with cheese cloth, napa cabbage leaves, or these lovely bamboo steamer discs, which can be found in some Chinese restaurant supply stores (if using these, you must brush the discs with oil first).</li>
+            <li>When all that is prepared, take out the filling. You'll be making each bun one at a time. Place about 1 tablespoon of filling in the middle of your dumpling skin. Pleat with as many folds as you can muster: 12-20 folds should do it. Make sure the top is sealed. If the filling ever gets too wet or hard to handle, put it in the freezer for another 15 minutes and start again.</li>
+            <li>Place the buns in the lined steamer basket, about 2 inches apart.</li>
+            <li>In a metal steamer pot or wok, boil water. If using a wok, put the water at a level so that when you put the bamboo steamer into the wok, the water rises about 1/2 inch up the bottom of the bamboo base. You never want the water to touch the dumpings inside, though, so make sure not to fill it too high!</li>
+            <li>Once the water is boiling, put the bamboo steamer in the wok or steamer pot, cover with the bamboo steamer lid, and steam over high heat for 8 minutes. Immediately remove the bamboo steamer from the pot and serve.</li>
+            <li>Pour some Chinese black vinegar out into a small, round dish or bowl, and top with some very thin matchsticks of ginger.</li>
+            <li>Take out your two utensils - chopsticks and a Chinese soup spoon.</li>
+            <li>Carefully, slowly peel the xiaolongbao off of the steamer basket and dip it into the vinegar. Gently transfer the dumpling to your soupspoon and take a tiny bite out of the skin on the side of the bun to make a little hole. Proceed to slurp the soup out of the bun. Then, with a little more vinegar, finish the whole thing off in one bite.</li>
+        </ol>
     </body>
 </html>
