Add image zhaliang.html

--- a/recipes/zhaliang.html
+++ b/recipes/zhaliang.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Zhaliang</h1>
+        <img src="../images/zhaliang.jpg" alt="Photo of zhaliang" width="300">
     </body>
 </html>
