Add description heading and paragraph zhaliang.html

--- a/recipes/zhaliang.html
+++ b/recipes/zhaliang.html
@@ -7,5 +7,9 @@
     <body>
         <h1>Zhaliang</h1>
         <img src="../images/zhaliang.jpg" alt="Photo of zhaliang" width="300">
+        <h2>Description</h2>
+        <p>
+            Zhaliang is a Cantonese dim sum dish consisting of crispy Chinese fried dough (youtiao) wrapped inside silky rice noodles. It is then garnished with a drizzle of sweet soy sauce and sometimes sesame seeds or scallions.
+        </p>
     </body>
 </html>
