--- a/recipes/zhaliang.html
+++ b/recipes/zhaliang.html
@@ -11,5 +11,27 @@
         <p>
             Zhaliang is a Cantonese dim sum dish consisting of crispy Chinese fried dough (youtiao) wrapped inside silky rice noodles. It is then garnished with a drizzle of sweet soy sauce and sometimes sesame seeds or scallions.
         </p>
+        <h2>Ingredients</h2>
+        <ul>
+            For the sauce:
+            <li>1 scallion</li>
+            <li>1 inch piece ginger</li>
+            <li>2 1/2 tablespoons light soy sauce</li>
+            <li>2 teaspoons dark soy sauce</li>
+            <li>5 teaspoons sugar</li>
+            <li>1/3 cup water</li>
+            <li>1 teaspoon oyster sauce</li>
+            <li>1 teaspoon oil</li>
+            <li>Salt</li>
+            For the zhaliang:
+            <li>1 youtiao</li>
+            <li>5 tablespoons rice flour</li>
+            <li>1 tablespoon mung bean starch</li>
+            <li>2 tablespoons wheat starch</li>
+            <li>2 tablespoons cornstarch</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1 cup water</li>
+            <li>Vegetable or canola oil</li>
+        </ul>
     </body>
 </html>
