--- a/recipes/zhaliang.html
+++ b/recipes/zhaliang.html
@@ -33,5 +33,20 @@
             <li>1 cup water</li>
             <li>Vegetable or canola oil</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Prepare the sauce by adding all the ingredients (1 scallion, white part only, 1-inch piece of ginger, 2 1/2 tablespoons light soy sauce, 2 teaspoons dark soy sauce, 5 teaspoons sugar, 1/3 cup water, 1 teaspoon oyster sauce, 1 teaspoon oil, and salt to taste) to a small saucepan over medium low heat.</li>
+            <li>Bring the sauce to a simmer and turn off the heat. Cool completely and remove the ginger and scallion. You can store this sauce in the refrigerator for up to 2 weeks.</li>
+            <li>Prehaet your oven or toaster oven to 350 degrees F/175 degrees C. Rip 1 piece of Chinese fried dough in half llengthwise into 2 long pieces, and reheat for 5-8 minutes - as long as it takes to get hot and slightly crunchy, but not brittle like a piece of toast. Take care not to burn it. They will be crisp once cooled.</li>
+            <li>First, gather the cooking tools you need. Soak the cotton cloth in water for a few minutes so it's completely saturated.</li>
+            <li>Next, combine the rice flour, mung bean starch, wheat starch, cornstarch, and salt in a large mixing bowl. Add the water and stir for at least 3 minutes until the dry ingredients are well-dissolved. Set aside and allow time for any air bubbles to dissipate.</li>
+            <li>Prepare a large assembly station by brushing some oil on a clean, smooth surface like a non-porous countertop, a large flat plate, or a smooth cutting board.</li>
+            <li>Next, pre-boil the water in your steamer or wok with the lid on, making sure your wok or steamer fits the flat-bottomed pan you will use to cook the rice noodes.</li>
+            <li>Now lift the soaking wet cotton cloth out of the water and line the bottom of the pan with it. Do not wring out the water!</li>
+            <li>Re-stir the starch and water mixture well before adding just enough to cover the cloth at the bottom of the pan completely. Too much means too thick of a rice noodle. The water in your steamer should be boiling. Use the plate gripper and carefully lower the pan into the steamer or directly onto the simmering water if you're using a wok. Make sure the pan is perfectly level, or the noodles will be too thick on one side and too thin on the other. Immediately cover the lid and steam on high for 2 minutes. All of this must happen quickly.</li>
+            <li>When 2 minutes have elapsed, remove the pan from the steamer using the plate gripper, and transfer to your assembly station. Carefully lift the cloth out of the pan and place it with the rice noodle side down onto the oiled surface you prepared earlier. Use the dough scraper and your hands to carefully scrape the rice noodle sheet off of the cotton cloth and lift the cloth away so the noodle is in a single layer on the oiled surface. This step must happen quickly while the noodle and cotton cloth are still hot. The noodle might have a small hole here or there - it doesn't affect the tastiness or look of the end result!</li>
+            <li>Line up one crispy youtiao along the long side of the rice noodle. Using the dough scraper, roll it up in the rice sheet so it's in one long cigar. Cut each into bite-sized pieces, drizzle with the prepared sauce, and eat while it's still hot!</li>
+            <li>Rinse the cotton cloth in clean water (no soap or detergent necessary) to remove the rice residue before making the next one. These are best eaten when fresh.</li>
+        </ol>
     </body>
 </html>
